Changes made in home fragment

--- a/app/src/main/res/layout/buy_inputs_animated_ic_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_animated_ic_cart.xml
@@ -6,9 +6,8 @@
     android:layout_height="wrap_content"
     android:clipToPadding="false"
     android:focusable="true"
-    android:padding="@dimen/dimen_5dp"
-    android:layout_margin="@dimen/dimen_5dp"
-   >
+    android:padding="2dp"
+    android:layout_margin="2dp">
 
     <ImageView
         android:id="@+id/imageView2"
