implemented add item to cart functionality under product description

--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -89,7 +89,7 @@
                     android:layout_gravity="end|center_vertical"
                     android:layout_margin="10dip"
                     android:background="@drawable/rounded_cornor_bg_light"
-                    app:srcCompat="@drawable/ic_chevron_right"
+                    android:src="@drawable/ic_chevron_right"
                     app:tint="#FF6969" />
             </FrameLayout>
 
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_10dp"
                 android:layout_marginLeft="@dimen/dimen_10dp"
-                app:srcCompat="@drawable/ic_pin" />
+                android:src="@drawable/ic_pin" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -239,7 +239,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_shipping_car" />
+                        android:src="@drawable/ic_shipping_car" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
