removed crt menu item on buy nd sell bottom navigtion

--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -6,13 +6,13 @@
     android:background="#FBFBFB"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="?actionBarSize">
 
     <LinearLayout
         android:id="@+id/cart_view_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize"
         android:orientation="vertical"
         android:padding="20dp">
 
