--- a/app/src/main/res/layout/fragment_buy_and_sell_home.xml
+++ b/app/src/main/res/layout/fragment_buy_and_sell_home.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/windowBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -204,6 +205,8 @@
         android:background="@color/white"
         app:labelVisibilityMode="labeled"
         app:itemIconTint="@android:color/transparent"
+        app:itemTextAppearanceInactive="@style/BottomNavigationView"
+        app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
