--- a/app/src/main/res/layout/wallet_add_money_voucher.xml
+++ b/app/src/main/res/layout/wallet_add_money_voucher.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/solidwhite_shape"
+    android:background="@drawable/dialog_background"
     android:orientation="vertical"
     android:theme="@style/AppTheme">
 
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/colorPrimary">
+        android:background="@drawable/top_rounded_blue">
 
         <TextView
             android:layout_width="match_parent"
@@ -38,8 +38,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingRight="@dimen/dimen_20dp"
-        android:paddingLeft="@dimen/dimen_20dp"
-        android:background="#F1F5F8">
+        android:paddingLeft="@dimen/dimen_20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
