--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -6,15 +6,27 @@
     android:background="#FBFBFB"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="vertical"
-    android:layout_marginTop="?actionBarSize">
+    android:orientation="vertical">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_product_home"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
     <LinearLayout
         android:id="@+id/cart_view_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_marginTop="?actionBarSize">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -88,9 +100,7 @@
                     android:layout_height="30dip"
                     android:layout_gravity="end|center_vertical"
                     android:layout_margin="10dip"
-                    android:background="@drawable/rounded_cornor_bg_light"
-                    android:src="@drawable/ic_chevron_right"
-                    app:tint="#FF6969" />
+                    android:background="@drawable/ic_right_chevron" />
             </FrameLayout>
 
             <androidx.constraintlayout.widget.Guideline
