Fixed Navigation bugs

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -87,6 +87,9 @@
     <dimen name="dimen_7dp">7dp</dimen>
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_40dp">40dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 
 </resources>
