--- a/app/src/main/res/navigation/wallet_nav_graph.xml
+++ b/app/src/main/res/navigation/wallet_nav_graph.xml
@@ -215,10 +215,10 @@
         android:id="@+id/businessAccountFragment"
         android:name="com.cabral.emaishapay.fragments.BusinessAccountFragment"
         android:label="Merchant Details" />
-    <fragment
+    <activity
         android:id="@+id/walletBuySellFragment"
-        android:name="com.cabral.emaishapay.fragments.buyandsell.WalletBuySellFragment"
+        android:name="com.cabral.emaishapay.activities.WalletBuySellActivity"
         android:label=" "
-        tools:layout="@layout/fragment_buy_and_sell_home"/>
+        tools:layout="@layout/activity_wallet_buy_sell"/>
 
 </navigation>
