--- a/app/src/main/res/navigation/buy_sell_navigation.xml
+++ b/app/src/main/res/navigation/buy_sell_navigation.xml
@@ -3,25 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/walletBuyFragment">
 
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/walletBuyFragment"
         android:name="com.cabral.emaishapay.fragments.buyandsell.WalletBuySellFragment"
         android:label=" "
         tools:layout="@layout/fragment_buy_and_sell_home"/>
 
+
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/walletSellFragment"
+        android:name="com.cabral.emaishapay.SellFragment"
+        android:label="fragment_sell"
+        tools:layout="@layout/fragment_sell" />
+
+    <fragment
+        android:id="@+id/walletOrdersFragment"
         android:name="com.cabral.emaishapay.fragments.buyandsell.My_Orders"
         android:label="@string/actionOrders"
         tools:layout="@layout/buy_inputs_orders" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/walletAddressesFragment"
         android:name="com.cabral.emaishapay.fragments.buyandsell.My_Addresses"
         android:label="@string/actionAddresses"
         tools:layout="@layout/buy_inputs_my__addresses" />
+
 
 </navigation>
