--- a/app/src/main/res/layout/buy_inputs_checkout.xml
+++ b/app/src/main/res/layout/buy_inputs_checkout.xml
@@ -378,7 +378,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
-                        android:background="@drawable/rounded_corners_button_green"
+                        android:background="@drawable/rectangular_green_solid"
                         android:padding="10dp"
                         android:text="@string/apply"
                         android:textColor="@color/white"
@@ -483,10 +483,10 @@
         <Button
             android:id="@+id/checkout_order_btn"
             android:layout_width="0dip"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight=".5"
-            android:background="@drawable/round_button_dark_green"
+            android:background="@drawable/rounded_corners_button"
             android:drawableEnd="@drawable/ic_right_chevron"
             android:paddingEnd="10dp"
             android:text="@string/btn_continue"
