--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -281,7 +281,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="UGX 00.0"
-                            android:textColor="@color/colorAccentGreen"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
@@ -293,7 +293,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
                         android:layout_weight="1"
-                        android:background="@drawable/round_button_dark_green"
+                        android:background="@drawable/rounded_corners_button"
                         android:drawableEnd="@drawable/ic_right_chevron"
                         android:padding="8dp"
                         android:text="Checkout"
