--- a/app/src/main/res/layout/emaisha_pay_home.xml
+++ b/app/src/main/res/layout/emaisha_pay_home.xml
@@ -748,6 +748,19 @@
                     android:layout_marginBottom="20dp"
                     android:layout_below="@id/recycler_view"
                     android:layout_alignParentEnd="true"/>
+                <TextView
+                    android:id="@+id/no_transaction_cards"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="No Transactions Available"
+                    android:textColor="#404040"
+                    android:alpha=".4"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    android:visibility="visible"
+                    android:layout_marginStart="@dimen/dimen_20dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_below="@id/recycler_view"/>
 
 
             </RelativeLayout>
