--- a/app/src/main/res/menu/bottom_navigation_buy_and_sell_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_buy_and_sell_menu.xml
@@ -23,7 +23,7 @@
     <item
         android:id="@+id/walletAddressesFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_accept"
+        android:icon="@drawable/ic_location_pin"
         android:title="ADDRESSES"
         app:showAsAction="ifRoom"/>
 
