refreneced buy sell activity insted of wallet home activity under product description

--- a/app/src/main/res/layout/emaisha_pay_home.xml
+++ b/app/src/main/res/layout/emaisha_pay_home.xml
@@ -757,7 +757,7 @@
                     android:alpha=".4"
                     android:textStyle="bold"
                     android:textSize="18sp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:layout_marginStart="@dimen/dimen_20dp"
                     android:layout_marginBottom="10dp"
                     android:layout_below="@id/recycler_view"/>
