--- a/app/src/main/res/drawable/ic_arrow.xml
+++ b/app/src/main/res/drawable/ic_arrow.xml
@@ -6,5 +6,5 @@
   <path
       android:pathData="M0.0686,0.26578 L3.79707,3.86578 7.52507,0.26578Z"
       android:strokeWidth="0"
-      android:fillColor="#557f5f"/>
+      android:fillColor="@color/colorPrimary"/>
 </vector>
