--- a/app/src/main/res/layout-ldrtl/buy_inputs_dialog_list.xml
+++ b/app/src/main/res/layout-ldrtl/buy_inputs_dialog_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -12,7 +13,7 @@
         android:layout_height="60dp"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@color/colorAccentGreen">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:id="@+id/dialog_title"
@@ -50,8 +51,8 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:layout_margin="5dp"
-        android:background="@color/colorAccentGreen"
-        android:gravity="center_horizontal" />
+        android:background="@color/colorPrimary"
+        android:gravity="center" />
 
 
 </LinearLayout>
