--- a/app/src/main/res/layout/buy_inputs_dialog_input.xml
+++ b/app/src/main/res/layout/buy_inputs_dialog_input.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/colorAccentGreen">
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/dismissButton"
